<resources>
    <string name="app_name">Game Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_text1">New user?</string>
    <string name="login_signup">Sign up now</string>
    <string name="signup_create">Create your account</string>
    <string name="signup_name">Name</string>
    <string name="signup_passwordConfirm">Confirm password</string>
    <string name="signup_signup">Sign up</string>
    <string name="add_add">Add</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_title">Title</string>
    <string name="add_year">Year</string>
    <string name="add_physical">Physical</string>
    <string name="add_digital">Digital</string>
    <string name="add_case">Case</string>
    <string name="add_manual">Manual</string>
    <string name="add_platform">Platform</string>
</resources>