<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.addGame">

    <Button
        android:id="@+id/AddGame_buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_add"
        app:layout_constraintEnd_toEndOf="@+id/AddGame_editTextYear"
        app:layout_constraintStart_toStartOf="@+id/AddGame_editTextYear"
        app:layout_constraintTop_toBottomOf="@+id/AddGame_editTextYear" />

    <Button
        android:id="@+id/AddGame_buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_cancel"
        app:layout_constraintEnd_toEndOf="@+id/AddGame_buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/AddGame_buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/AddGame_buttonAdd" />

    <EditText
        android:id="@+id/AddGame_editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddGame_editTextYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_year"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/AddGame_editTextTitle"
        app:layout_constraintStart_toStartOf="@+id/AddGame_editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/AddGame_editTextTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>